# darknet

./: .gitignore  CMakeLists.txt  Makefile  build.bat
include/: darknet.h
src/: activations.c  compare.c  convolutional_layer.c  cost_layer.c  crnn_layer.c  data.c  data.h  deconvolutional_layer.c  detection_layer.c  dropout_layer.c  gru_layer.c  image.c  lstm_layer.c  network.c  network_kernels.cu  parser.c  region_layer.c  rnn_layer.c  shortcut_layer.c  softmax_layer.c  upsample_layer.c  utils.c  yolo_layer.c
